# Yanbao-skill

./: SKILL.md
agents/: openai.yaml
assets/project-template/: .gitignore  pyproject.toml
assets/project-template/.test-tmp/9f556ade495d43168d60147024d71239/: backup.sqlite3
assets/project-template/docs/: 飞书多段中文回复完整交付方法论.md
assets/project-template/schemas/: life_advance.schema.json  turn_result.schema.json
assets/project-template/src/yanbao_runtime/: __init__.py  cli.py  contracts.py  life.py  ports.py  schema.sql  service.py  store.py
assets/project-template/tests/: test_cli.py  test_contracts.py  test_life.py  test_service.py  test_store.py
references/: adapters.md  architecture.md  authoring.md  bridging.md  evaluation.md  expression.md  failure-patterns.md  implementation.md  life-simulation.md  media.md  persistence.md  project-structure.md  relationships.md  reliability.md  runtime.md  testing.md
