[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "yanbao-runtime-template"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
yanbao-runtime = "yanbao_runtime.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

